addUserSkill is working on localhost
