# models/user_skill.js
@@ -9,7 +9,7 @@ const userSkillSchema = new mongoose.Schema({
     enum: ['beginner', 'intermeditate', 'advanced'],
     required: true
   },
-  isTeachAble: { type: String, enum: ['y', 'n'], lowercase: true, required: true },
+  isTeachable: { type: String, enum: ['y', 'n'], lowercase: true, required: true },
   isLearnable: { type: String, enum: ['y', 'n'], lowercase: true, required: true }
 });
 
